# pixelsynth

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  node.cpp  node.h
cmake/: compiler.cmake  glfw.cmake  os-libraries.cmake  versioninfo.cmake  versioninfo.h.in
core/: CMakeLists.txt  connection.cpp  connection.h  document.cpp  document.h  factory.cpp  factory.h  hash.h  log.cpp  log.h  metadata.h  mutation-info.cpp  mutation-info.h  mutation_info.cpp  mutation_info.h  node.cpp  node.h  ostream.cpp  ostream.h  prettyprint.h  project.cpp  project.h  property.cpp  property.h  serializer.h  static.h  stringhash.h  utils.h  uuid.cpp  uuid.h  versioninfo.h.in
editor/: CMakeLists.txt  main.cpp
editor-lib/: CMakeLists.txt  actions.cpp  actions.h  application.cpp  application.h  event_bus.cpp  event_bus.h  main_window.cpp  main_window.h  static.h
editor-lib/modules/: metadata.cpp  metadata.h
editor-lib/modules/graph/: module.cpp  module.h  widget.cpp  widget.h
editor-lib/modules/inspector/: model.cpp  model.h  module.cpp  module.h  widget.cpp  widget.h
editor-lib/modules/property_editors/: delegate.cpp  delegate.h  editors.cpp  editors.h  property_value_item.cpp  property_value_item.h
editor-lib/modules/timeline/: keyframe_delegate.cpp  keyframe_delegate.h  keyframe_header.cpp  keyframe_header.h  keyframe_selectionmodel.cpp  keyframe_selectionmodel.h  keyframe_treeview.cpp  keyframe_treeview.h  model.cpp  model.h  module.cpp  module.h  proxy_model.cpp  proxy_model.h  widget.cpp  widget.h
editor-lib/modules/timeline/keyframer/: delegate.cpp  delegate.h  draggable.cpp  draggable.h  header.cpp  header.h  parent_area.cpp  parent_area.h  row_editor.cpp  row_editor.h  tree_view.cpp  tree_view.h  widget.cpp  widget.h
editor-lib/modules/timeline/keyframer/editors/: node_editor.cpp  node_editor.h  property_editor.cpp  property_editor.h
editor-lib/modules/timeline/keyframer/editors/node/: drag_handle.cpp  drag_handle.h  selection_area.cpp  selection_area.h
editor-lib/modules/timeline/keyframer/editors/property/: key.cpp  key.h
libs/tree/tree/: tree_util.h
tests/: CMakeLists.txt  core.mutation.specs.cpp  core.serialization.specs.cpp  core.specs.cpp  editor.modules.timeline.specs.cpp  main.cpp  modeltest.cpp  modeltest.h  mutationproject.cpp  mutationproject.h  static.cpp  static.h  test-utils.h  testnode.h
